Outline Done! Events on main window need new implementations and we need to create a add debtor popup, along with a add debt popup window.

--- a/DebtBook/DebtBook/App.xaml
+++ b/DebtBook/DebtBook/App.xaml
@@ -3,7 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DebtBook"
              StartupUri="MainWindow.xaml">
+
     <Application.Resources>
-         
+
+        <Style x:Key="BottonToolbarStyle" TargetType="{x:Type Button}" >
+            <Style.Setters>
+                <Setter Property="Height" Value="auto" />
+                <Setter Property="Width" Value="50" />
+                <Setter Property="Foreground" Value="AliceBlue" />
+                <Setter Property="FontWeight" Value="ExtraBold" />
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="FontFamily" Value="Palatino Linotype" />
+            </Style.Setters>
+        </Style>
+
+        <DataTemplate x:Key="DebtorTemplate">
+            <WrapPanel>
+                <TextBlock Text="{Binding Path=Name}" Padding="5, 0"
+                           Width="Auto" 
+                />
+                <TextBlock Text="{Binding Path=Debt}" Padding="5, 0"
+                           Width="Auto"
+                />
+            </WrapPanel>
+        </DataTemplate>
     </Application.Resources>
 </Application>
