--- a/DebtBook/DebtBook/DebterLog.xaml
+++ b/DebtBook/DebtBook/DebterLog.xaml
@@ -7,16 +7,19 @@
         mc:Ignorable="d"
         Title="DebtorLog" Height="450" Width="457.509">
     <Grid>
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="310" Margin="25,31,0,0" VerticalAlignment="Top" Width="244">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <ListView x:Name="listView" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Grid.Column ="0">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="button" Content="Close" HorizontalAlignment="Left" Margin="100,361,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button1" Content="Add value" HorizontalAlignment="Left" Margin="309,79,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="309,31,0,0" TextWrapping="Wrap" Text="Value" VerticalAlignment="Top" Width="120"/>
-
+        <Button x:Name="CloseButton" Content="Close" HorizontalAlignment="Left" Margin="19,130,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20"/>
+        <Button x:Name="AddValButton" Content="Add value" HorizontalAlignment="Left" Margin="19,79,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20"/>
+        <TextBox x:Name="ValuetextBox" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Value" VerticalAlignment="Top" Grid.Column="1" Padding="10"/>
     </Grid>
 </Window>
