--- a/DebtBook Fixed/DebtBook/View/MainWindow.xaml
+++ b/DebtBook Fixed/DebtBook/View/MainWindow.xaml
@@ -21,7 +21,7 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" FontSize="35" HorizontalAlignment="Center" TextWrapping="Wrap"
                        Text="Debtors" VerticalAlignment="Top"
-                       Foreground="AliceBlue" Margin="335,0,334,0" Height="47" Width="123" />
+                       Foreground="AliceBlue"/>
             <ToolBar Height="auto"
                      FontSize="20" FontWeight="Bold"
                      Background="#315a9e" Grid.Row="2">
