--- a/DebtBook Fixed/DebtBook/View/DebterLog.xaml
+++ b/DebtBook Fixed/DebtBook/View/DebterLog.xaml
@@ -5,22 +5,59 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DebtBook"
         mc:Ignorable="d"
-        Title="DebtorLog" Height="450" Width="457.509">
+        Title="Edit Debts" Height="300" Width="500" Background="#315a9e" 
+        FontFamily="Palatino Linotype" FontSize="16">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="170*"/>
+            <RowDefinition Height="74*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="232*"/>
+            <ColumnDefinition Width="87*"/>
+            <ColumnDefinition Width="173*"/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="listView" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Grid.Column ="0">
+        <ListView x:Name="listView" HorizontalAlignment="Stretch" 
+                  VerticalAlignment="Stretch" Grid.Column ="0" Grid.RowSpan="2"
+                  Background="#2c2f33" Foreground="AliceBlue" Padding="3" Margin="3" FontSize="10"
+                  >
             <ListView.View>
                 <GridView>
-                    <GridViewColumn/>
+                    <GridViewColumn Header="Debts" Width="100" DisplayMemberBinding="{Binding Path=debtSize}"/>
+                    <GridViewColumn Header="Date of inserted Debt" Width="110" DisplayMemberBinding="{Binding Path= _date}"/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="CloseButton" Content="Close" HorizontalAlignment="Left" Margin="19,130,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20"/>
-        <Button x:Name="AddValButton" Content="Add value" HorizontalAlignment="Left" Margin="19,79,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="20"/>
-        <TextBox x:Name="ValuetextBox" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Value" VerticalAlignment="Top" Grid.Column="1" Padding="10"/>
-        <Button x:Name="button" Content="Cancel" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="center" Width="75"/>
+        <Label Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Foreground="AliceBlue">Insert Debt: </Label>
+
+        <StackPanel Grid.Column="2" Grid.RowSpan="3" >
+            <TextBox x:Name="ValuetextBox" Text="{Binding Path=DebtValue}" Background="#2c2f33" Foreground="AliceBlue" Margin="3"/>
+            <Button x:Name="AddValButton" Content="Add value"
+                    Foreground="AliceBlue" 
+                    Background="#2c2f33"
+                    TabIndex="5" 
+                    Margin="3"
+                    Padding="2"
+                    Command="{Binding Path=AddValueCommand}"/>
+        </StackPanel>
+        <WrapPanel Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" >
+
+            <Button x:Name="CloseButton" Content="Close" 
+                    Foreground="AliceBlue" 
+                    Background="#2c2f33"
+                    TabIndex="5" 
+                    Margin="3"
+                    MinWidth="75"
+                    Padding="2"/>
+
+            <Button x:Name="button" Content="Cancel"
+                    Foreground="AliceBlue" 
+                    Background="#2c2f33"
+                    TabIndex="5" 
+                    Margin="3"
+                    MinWidth="75"
+                    Padding="2" IsCancel="True"/>
+        </WrapPanel>
     </Grid>
 </Window>
