--- a/DebtBook Fixed/DebtBook/View/DebterLog.xaml
+++ b/DebtBook Fixed/DebtBook/View/DebterLog.xaml
@@ -32,7 +32,7 @@
         <Label Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Foreground="AliceBlue">Insert Debt: </Label>
 
         <StackPanel Grid.Column="2" Grid.RowSpan="3" >
-            <TextBox x:Name="ValuetextBox" Text="{Binding Path=DebtValue}" Background="#2c2f33" Foreground="AliceBlue" Margin="3"/>
+            <TextBox x:Name="ValuetextBox" Text="{Binding Path=Value}" Background="#2c2f33" Foreground="AliceBlue" Margin="3"/>
             <Button x:Name="AddValButton" Content="Add value"
                     Foreground="AliceBlue" 
                     Background="#2c2f33"
