--- a/DebtBook/DebtBook/App.xaml
+++ b/DebtBook/DebtBook/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DebtBook"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml">
 
     <Application.Resources>
 
@@ -16,16 +16,5 @@
                 <Setter Property="FontFamily" Value="Palatino Linotype" />
             </Style.Setters>
         </Style>
-
-        <DataTemplate x:Key="DebtorTemplate">
-            <WrapPanel>
-                <TextBlock Text="{Binding Path=Name}" Padding="5, 0"
-                           Width="Auto" 
-                />
-                <TextBlock Text="{Binding Path=Debt}" Padding="5, 0"
-                           Width="Auto"
-                />
-            </WrapPanel>
-        </DataTemplate>
     </Application.Resources>
 </Application>
